2003-12-12  Ethan Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc docs/gnuplot.texi term/post.trm term/x11.trm:
	Update the "New in Version 4.0" section of the docs, and change all the
	URLs for demos to point to the SourceForge web site rather than to
	Alex Woo's old web site at nasa.gov.

2003-12-05  Ethan Merritt  <merritt@u.washington.edu>

	* term/x11.trm: Leave current window unchanged when closing old window
	using the 'set term x11 <old> close' command.

2003-12-02  Ethan Merritt  <merritt@u.washington.edu>

	* term/svg.trm: Add conditional code to make svg output compatible with
	the Sodipodi svg viewer/editor. Sodipodi does not yet implement the full
	svg syntax, including the "currentColor" attribute. This change was
	checked for correctness using the Adobe svg viewer, which produces the
	same display given either the original or the simplified output.

	* term/svg.trm: Force a new graphics context whenever linewidth changes.

2003-12-01  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/tables.h (enum set_id): Renamed parser constant S_OUTPUT to
	SET_OUTPUT, in order to avoid collision with MacOS X 10.3 system
	headers.

	* src/tables.c (set_tbl): Likewise.

	* src/set.c (set_command): Likewise.

	* src/unset.c (unset_command): Likewise.

	* src/show.c (show_command): Likewise.

2003-12-01  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/command.c src/history.c docs/gnuplot.doc: New option
	"history quiet" to suppress enumeration of history entries (helps
	cut&paste).

2003-11-30  Ethan Merritt  <merritt@u.washington.edu>

	* term/post.trm src/term_api.h src/term.c: Move enhanced text mode
	parsing and processing from post.trm to the gnuplot core. This
	requires 3 new entries in TERM_TABLE for any terminal driver that
	wants to share the enhanced text code. The behaviour of the
	postscript terminal is unaffected by this change.
	
	* src/gplt_x11.c term/dumb.trm term/gd.trm term/pdf.trm