@@ -1,5 +1,5 @@
 %
-% $Id: titlepag.tex,v 1.14 2003/07/28 22:57:49 sfeam Exp $
+% $Id: titlepag.tex,v 1.15 2003/12/13 00:56:28 sfeam Exp $
 %
 
 \ifx\LaTeXe\undefined
@@ -150,8 +150,8 @@
 
   \vspace{2ex}
 
-  Mailing list for comments: \verb+info-gnuplot@dartmouth.edu+\\
-  Mailing list for bug reports: \verb+bug-gnuplot@dartmouth.edu+
+  Mailing list for comments: \verb+gnuplot-info@lists.sourceforge.net+\\
+  Mailing list for bug reports: \verb+gnuplot-bugs@lists.sourceforge.net+
 
   \vfill
   This manual was prepared by Dick Crawford. \\
@@ -163,7 +163,7 @@
 \else {
   \catcode`\$=10 \let\$\relax
   \def\ignoredate#1Date: #2{#2}
-  Last edited: \ignoredate $Date: 2003/07/28 22:57:49 $
+  Last edited: \ignoredate $Date: 2003/12/13 00:56:28 $
   }
 \fi
 
