@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: plot.c,v 1.63 2003/02/18 16:38:10 broeker Exp $"); }
+static char *RCSid() { return RCSid("$Id: plot.c,v 1.64 2003/12/13 00:56:28 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - plot.c */
@@ -369,8 +369,8 @@ char **argv;
 		    "  -V, --version\n"
 		    "  -h, --help\n"
 		    "gnuplot %s patchlevel %s\n"
-		    "Report bugs to <info-gnuplot-beta@dartmouth.edu>\n",
-		    gnuplot_version, gnuplot_patchlevel);
+		    "Report bugs to %s\n",
+		    gnuplot_version, gnuplot_patchlevel, bug_email);
 	    return 0;
 	}
     }
