@@ -5,6 +5,14 @@
 	URLs for demos to point to the SourceForge web site rather than to
 	Alex Woo's old web site at nasa.gov.
 
+	* docs/gnuplot.doc docs/gnuplot.texi docs/titlepag.tex src/Makefile.am
+	src/plot.c: Change references to mailing lists to 
+		gnuplot-info@lists.sourceforge.net
+		gnuplot-bugs@lists.sourceforge.net
+		gnuplot-beta@lists.sourceforge.net
+	There are many more explicit references to dartmouth.edu in the source
+	files and in the hard-wired Makefiles that I did not change.
+
 2003-12-05  Ethan Merritt  <merritt@u.washington.edu>
 
 	* term/x11.trm: Leave current window unchanged when closing old window
